# niji-pipeline

./: .env  .gitignore  gen_ran.py  pyproject.toml
config/characters/: nami.yaml  ran.yaml
input/stories/: nami_treasure.txt  ran_karate.txt
resources/: anima_general_tags.csv
resources/stories/: fern_market.txt
src/: generator.py  ideator.py  main.py  planner.py  renderer.py  schema.py
tests/: test_generator.py  test_ideator.py  test_planner.py  test_renderer.py
